# kohiro

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  flake.nix  go.mod  go.sum  version
.ci/: push
auth/: auth.go
ci/: queue.go  runner.go  script.go
cmd/kohiro/: logs_middleware.go  main.go
docs/: CI.md  README.md  ROADMAP.md
git/: read.go  repo.go
issues/: client.go
src/: agent_backend.rs  auth.rs  ci.rs  git.rs  lib.rs  main.rs  paths.rs  server.rs  store.rs  tickets.rs
src/tui/: detail.rs  input.rs  keys.rs  mod.rs  repos.rs
store/: store.go  store_test.go
tests/: agent_dispatch.rs  auth.rs  ci_push.rs  git_read.rs  store.rs  tickets.rs  tui_input.rs  tui_ssh.rs
tui/: ci_view.go  issues_view.go  keymap.go  keys.go  middleware.go  prompt.go  repo_detail.go  repos.go  root.go  styles.go
